fix margins on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,15 +283,15 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.JPG") top right no-repeat;
+  background: url("../img/hero-bg.JPG") center no-repeat;
   background-size: cover;
   position: relative;
 }
 
-@media screen and (min-width: 100px) and (max-width: 480px) {
+@media screen and (min-width: 100px) and (max-width: 350px) {
   #hero {
-    background: url("../img/mobile2.JPG") top right no-repeat;
-    background-size: contain;
+    background: url("../img/mobile.JPG") center no-repeat;
+    background-size: cover;
   }
 }
 
@@ -539,6 +539,12 @@ section {
   position: relative;
 }
 
+@media screen and (min-width: 100px) and (max-width: 600px) {
+  .resume .resume-item{
+    margin-left: 20px
+  }
+}
+
 .resume .resume-item h4 {
   line-height: 18px;
   font-size: 18px;
@@ -777,7 +783,6 @@ section {
 
 img{
   max-width:700px;
-  max-height:450px;
   object-fit: contain;
 }
 
